--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1>kurs - rozszezenie</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, molestias?
+    </p>
   </body>
 </html>
