--- a/index.html
+++ b/index.html
@@ -139,6 +139,26 @@ submit – przycisk wysłania formularza -->
       </section>
     </div>
 
+    <!-- NIEDZIELA: -->
+
+    <ul class="list-styling">
+      <li>
+        <a href="#">item1</a>
+      </li>
+      <li>
+        <a href="#">item2</a>
+      </li>
+      <li>
+        <a href="#">item3</a>
+      </li>
+    </ul>
+
+    <div class="relative-element">
+      <div class="absolute-element"></div>
+      <div class="absolute-element-overlay"></div>
+      <div class="fixed-element"></div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
